--- a/SHIRO-SPRING/src/main/webapp/WEB-INF/web.xml
+++ b/SHIRO-SPRING/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,7 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
+         
     <!-- spring -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
@@ -10,6 +11,22 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+    
+    <!-- Shiro Filter is defined in the spring application context: -->
+    <!-- 配置shiro的shiroFilter -->
+    <filter>
+        <filter-name>shiroFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+        <init-param>
+            <param-name>targetFilterLifecycle</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>shiroFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <!-- SpringMvc 的配置 -->
     <servlet>
